* frontend: minor fix

--- a/frontend/src/_styles/modules/gallery-cart.styl
+++ b/frontend/src/_styles/modules/gallery-cart.styl
@@ -15,11 +15,12 @@
         justify-content center
         align-items center
         text-align center
-        background rgba(0, 0, 0, 0.5)
+        background rgba(0, 0, 0, .5)
         height 100%
         width 100%
-        transition all 0.45s ease-in-out
+        transition opacity 0.45s ease-in-out
         opacity 0
+        cursor pointer
 
         &:hover
             opacity 1
