--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -65,6 +65,11 @@
     li
         a
             cursor pointer
-
+            
+            &.active
             &:hover
                 color $color-darkcoral
+                
+        span
+            display inline-block
+            min-width 15px
