--- a/frontend/src/faq/index.jade
+++ b/frontend/src/faq/index.jade
@@ -1,53 +1,85 @@
 extends ../_layouts/base
 
 block config
-  //- Correct base url pathing for this page
-  - var baseUrl = '../'
+    //- Correct base url pathing for this page
+    - var baseUrl = '../'
 
 block content
     .ui-page-faq
-          .grid.grid--container
-              .row
-                  .col.col--xl-12
-                      .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black ВОПРОС-ОТВЕТ
-                  .col.col--xl-3
-                      .ui-page-faq__photo(style="background-image: url('/images/faq/1.png')")
-                  .col.col--xl-9
-                      .ui-text-block
-                          .ui-text-block__text В данном разделе собраны наиболее распространённые вопросы#[br] и ответы на них. Вы также можете 
-                              a задать свой вопрос.
-                  .col.col--xl-12
-                      .ui-text-block
-                          .ui-text-block__title.ui-text-block__title--grey.ui-text-block__title--small О перегородках
-                              ul.ui-faq
-                                  li 
-                                      a.ui-faq + Что означает «Оки-Доки»?
-                                      .ui-showfaq Все будет хорошо! Согласен делать хорошо! Все хорошо!
-                                  li 
-                                      a + Чем отличаются мобильные перегородки от стационарных? Какие перегородки дешевле?
-                                      .ui-showfaq 
-                                          a Мобильные перегородки
-                                          &nbsp изготавливаются в соответствии с указанными размерами на заводе и уже в готовом виде их привозят на заказ. Остается только их установить в соответствии с дизайн - проектом. 
-                                          a &nbsp Стационарные перегородки
-                                          &nbsp только комплектуются на складе, монтаж при этом более сложный и трудоемкий.  Однозначного ответа на вопрос: «Что дешевле?»- нет. Цена зависит от многих факторов. Необходимо сделать расчет.
-                                  li 
-                                      a + Есть ли гарантия?
-                                  li 
-                                      a + Какие возможны цвета офисных перегородок?
-                                  li 
-                                      a + Какие виды остекления?
-                                  li
-                                      a + Какова звукоизоляция?
-                                  li
-                                      a + В чем плюсы обивки тканью?
-                                  li
-                                      a + Можно ли дополнить конфигурацию, переделать, взять с собой при переезде, сменить ткань обивки?
-                                  li
-                                      a + Возможны ли нестандартные конфигурации, размеры офисных перегородок?
-                                  li
-                                      a + Насколько устойчива конструкция?
-                                  li
-                                      a + Можно ли доукомплектовать проект дополнительной мебелью?
-                                  li
-                                      a + Где можно посмотреть и «пощупать» продукцию «Оки-Доки»?
-                                  
+        .grid.grid--container
+            .row
+                .col.col--xl-12
+                    .ui-page__header.ui-heading.ui-heading--lvl2.ui-heading--black ВОПРОС-ОТВЕТ
+                .col.col--xl-3
+                    .ui-page-faq__photo(style="background-image: url('/images/faq/1.png')")
+                .col.col--xl-9
+                    .ui-text-block
+                        .ui-text-block__text В данном разделе собраны наиболее распространённые вопросы#[br] и ответы на них. Вы также можете 
+                            a задать свой вопрос.
+                .col.col--xl-12
+                    .ui-text-block
+                        .ui-text-block__title.ui-text-block__title--grey.ui-text-block__title--small О перегородках
+                            ul.ui-faq
+                                li 
+                                    a.js-faq-item
+                                        span + 
+                                        | Что означает «Оки-Доки»?
+                                    .ui-showfaq Все будет хорошо! Согласен делать хорошо! Все хорошо!
+                                li 
+                                    a.js-faq-item
+                                        span + 
+                                        | Чем отличаются мобильные перегородки от стационарных? Какие перегородки дешевле?
+                                    .ui-showfaq 
+                                        a Мобильные перегородки
+                                        &nbsp изготавливаются в соответствии с указанными размерами на заводе и уже в готовом виде их привозят на заказ. Остается только их установить в соответствии с дизайн - проектом. 
+                                        a &nbsp Стационарные перегородки
+                                        &nbsp только комплектуются на складе, монтаж при этом более сложный и трудоемкий.  Однозначного ответа на вопрос: «Что дешевле?»- нет. Цена зависит от многих факторов. Необходимо сделать расчет.
+                                li 
+                                    a.js-faq-item
+                                        span + 
+                                        | Есть ли гарантия?
+                                li 
+                                    a.js-faq-item
+                                        span + 
+                                        | Какие возможны цвета офисных перегородок?
+                                li 
+                                    a.js-faq-item
+                                        span + 
+                                        | Какие виды остекления?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | Какова звукоизоляция?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | В чем плюсы обивки тканью?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | Можно ли дополнить конфигурацию, переделать, взять с собой при переезде, сменить ткань обивки?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | Возможны ли нестандартные конфигурации, размеры офисных перегородок?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | Насколько устойчива конструкция?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | Можно ли доукомплектовать проект дополнительной мебелью?
+                                li
+                                    a.js-faq-item
+                                        span + 
+                                        | Где можно посмотреть и «пощупать» продукцию «Оки-Доки»?
+                .col.col--xl-12
+                    .ui-text-block
+                        .ui-text-block__title.ui-text-block__title--grey.ui-text-block__title--small О перегородках
+                            ul.ui-faq
+                                li 
+                                    a.js-faq-item
+                                        span + 
+                                        | Что означает «Оки-Доки»?
+                                    .ui-showfaq Все будет хорошо! Согласен делать хорошо! Все хорошо!
