--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -2,7 +2,7 @@
     box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
     display flex
     flex-direction column
-    height 100%
+    min-height 100%
 
     &__title
         background $color-darkcoral
@@ -32,7 +32,7 @@
         font-size 16px
         color #090909
         line-height 20px
-        height 100%
+        flex 1
 
         a
             color $color-darkcoral
