--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -809,6 +809,7 @@ init($breakpoints, $columns)
     line-height 20px
     margin 7px 0 7px 7px
     font-weight normal
+    border-radius 2px
 
     a
         font-weight normal
