--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -54,6 +54,9 @@
         background url('/images/step-check.png') no-repeat 0 50%
         padding 15px 0 15px 45px
 
+    &--bg
+        background #f2f2f2
+
 .ui-faq
     list-style none
     font-family 'Panton'
@@ -65,11 +68,11 @@
     li
         a
             cursor pointer
-            
+
             &.active
             &:hover
                 color $color-darkcoral
-                
+
         span
             display inline-block
             min-width 15px
