--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -13,6 +13,16 @@
         line-height 32px
         padding 23px 22px 25px
 
+        &--black
+            background #1e1e1e
+            color #f9f9f9
+            padding 0
+            display flex
+            align-items center
+            justify-content center
+            text-align center
+            height 74px
+
         &--grey
             background #f9f9f9
             color #090909
@@ -24,6 +34,14 @@
             line-height 32px
             padding-top 19px
             margin-top 20px
+
+    &__img
+        width 100%
+        height 425px
+        overflow hidden
+
+    &__flex
+        display flex
 
     &__text
         padding 25px 22px 32px
@@ -37,6 +55,7 @@
         a
             color $color-darkcoral
             text-decoration underline
+            cursor pointer
 
     &__text-italic
         font-family 'PantonRI'
