* frontend: правки по странице вакансий

--- a/frontend/src/about/jobs/index.jade
+++ b/frontend/src/about/jobs/index.jade
@@ -14,17 +14,28 @@ block content
                 .col.col--xl-6
                     .ui-text-block
                         .ui-text-block__title.ui-text-block__title--black Менеджер проектов (Офисные перегородки)
-                        .ui-text-block__text
-                            .ui-text-block__img
-                                img(src="/images/about/2.png")
-                            .ui-text-block__flex
-                                .col.col--xl-6.col--no-gutters
-                                    ul.ui-step-check.ui-step-check--bg Обязанности:
-                                .col.col--xl-6.col--no-gutters
-                                    ul.ui-step-check.ui-step-check--bg Качества:
+                        .ui-text-block__content
+                            .grid
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        .ui-text-block__img
+                                            img(src="/images/about/2.png", width="100%")
+                                .row.row--no-gutters
+                                    .col.col--xl-6
+                                        ul.ui-step-check.ui-step-check--bg Обязанности:
+                                    .col.col--xl-6
+                                        ul.ui-step-check.ui-step-check--bg Качества:
                 .col.col--xl-6
                     .ui-text-block
                         .ui-text-block__title.ui-text-block__title--black Дизайнер/архитектор интерьера офисных помещений, конструктор систем офисных перегородок.
-                        .ui-text-block__text
-                            .ui-text-block__img
-                                img(src="/images/about/3.png")
+                        .ui-text-block__content
+                            .grid
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        .ui-text-block__img
+                                            img(src="/images/about/3.png", width="100%")
+                                .row.row--no-gutters
+                                    .col.col--xl-6
+                                        ul.ui-step-check.ui-step-check--bg Обязанности:
+                                    .col.col--xl-6
+                                        ul.ui-step-check.ui-step-check--bg Качества:
