--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -37,12 +37,14 @@
 
     &__img
         width 100%
-        height 425px
+        max-height 425px
         overflow hidden
+        margin 15px 0
 
     &__flex
         display flex
 
+    &__content
     &__text
         padding 25px 22px 32px
         background #f9f9f9
@@ -56,6 +58,9 @@
             color $color-darkcoral
             text-decoration underline
             cursor pointer
+
+    &__content
+        padding 0
 
     &__text-italic
         font-family 'PantonRI'
