--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -54,8 +54,28 @@
         background url('/images/step-check.png') no-repeat 0 50%
         padding 15px 0 15px 45px
 
-    &--bg
-        background #f2f2f2
+.ui-step-check-bg
+    list-style none
+    padding 20px 0 20px
+    background #f2f2f2
+    font-weight bold
+    font-family 'Panton'
+    font-size 16px
+    color #090909
+    line-height 51px
+    padding 0 10px
+    height 100%
+    margin-bottom 20px
+
+    &__nobg
+        background none
+
+    li
+        background url('/images/step-check2.png') no-repeat 0 50%
+        padding 8px 0 8px 35px
+        font-weight normal
+        line-height 20px
+
 
 .ui-faq
     list-style none
