--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -21,7 +21,7 @@
             align-items center
             justify-content center
             text-align center
-            height 74px
+            height 95px
 
         &--grey
             background #f9f9f9
@@ -64,6 +64,15 @@
 
     &__text-italic
         font-family 'PantonRI'
+        padding-bottom 20px
 
     &__text-big
         font-size 20px
+
+    &__textbold
+        font-weight bold
+        text-align center
+        padding 40px 0 20px 0
+
+        span
+            font-weight normal
