--- a/frontend/src/about/jobs/index.jade
+++ b/frontend/src/about/jobs/index.jade
@@ -22,9 +22,27 @@ block content
                                             img(src="/images/about/2.png", width="100%")
                                 .row.row--no-gutters
                                     .col.col--xl-6
-                                        ul.ui-step-check.ui-step-check--bg Обязанности:
+                                        ul.ui-step-check-bg Обязанности:
+                                            li Приём заказов, расчеты, выезд к клиентам, проведение замеров
+                                            li Консультирование по ассортименту и номенклатуре, техническим характеристикам, области применения и планировке офисных перегородок
+                                            li Рассмотрение пожеланий и претензий
                                     .col.col--xl-6
-                                        ul.ui-step-check.ui-step-check--bg Качества:
+                                        ul.ui-step-check-bg Качества:
+                                            li Исполнительность, аккуратность, инициативность, стрессоустойчивость
+                                            li Желание и умение наладить контакт с заказчиком, понимание их потребностей
+                                            li Умение работать в команде в рамках существующих бизнес-процессов
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        .ui-text-block__text-italic #[br]#[br] Опыт корпоративных продаж в области обустройства офисов — желателен.#[br]
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        ul.ui-step-check-bg.ui-step-check-bg__nobg Условия:
+                                            li Обучение, испытательный срок
+                                            li З/п — 40–80 тыс. рублей
+                                            li Компенсация расходов на транспорт и связь.
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        .ui-text-block__textbold Тел: +7(495)663-18-81, доб 119, Алексей e-mail: aleksey@oki-doki.ru
                 .col.col--xl-6
                     .ui-text-block
                         .ui-text-block__title.ui-text-block__title--black Дизайнер/архитектор интерьера офисных помещений, конструктор систем офисных перегородок.
@@ -33,9 +51,29 @@ block content
                                 .row.row--no-gutters
                                     .col.col--xl-12
                                         .ui-text-block__img
-                                            img(src="/images/about/3.png", width="100%")
+                                            img(src="/images/about/2.png", width="100%")
                                 .row.row--no-gutters
                                     .col.col--xl-6
-                                        ul.ui-step-check.ui-step-check--bg Обязанности:
+                                        ul.ui-step-check-bg Требования:
+                                            li Обязательно знание AutoCAD и 3ds max
+                                            li Умение принимать решения по нестандартным заказам.
+                                            li Техническое образование.
                                     .col.col--xl-6
-                                        ul.ui-step-check.ui-step-check--bg Качества:
+                                        ul.ui-step-check-bg Должностные обязанности:
+                                            li Создание дизайн проектов планировки офисных помещений клиентам компании, подготовка задания для производства.
+                                            li Конструкция систем офисных перегородок, разработка нестандартных узлов и конструкций.
+                                            li Принятие решения по нестандартным конструкциям.
+                                            li   Работа в программах AutoCAD, 3ds max.
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        .ui-text-block__textbold Приветствуется:
+                                            span &nbsp знание Corel, Photoshop, опыт работы в аналогичной сфере.
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        ul.ui-step-check-bg.ui-step-check-bg__nobg Условия:
+                                            li Режим работы: с понедельника по пятницу с 9-00 до 18-00
+                                            li Обучение в процессе работы. Испытательный срок 1 месяц.
+                                            li Оплата: по результатам испытательного срока от 40 000 до 90 000
+                                .row.row--no-gutters
+                                    .col.col--xl-12
+                                        .ui-text-block__textbold Тел: +7(495)663-18-81, доб 119, Алексей e-mail: aleksey@oki-doki.ru
