--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -20,6 +20,7 @@
 @import 'modules/gallery-cart';
 @import 'modules/projects-cart';
 @import 'modules/text-block';
+@import 'modules/certificates-cart';
 
 @import 'grid/mixins/helpers'
 @import 'grid/mixins/grid-framework'
