--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -814,3 +814,9 @@ init($breakpoints, $columns)
 
     a
         font-weight normal
+
+.ui-service
+    padding-bottom 40px
+
+.ui-advantages
+    padding-bottom 50px
