--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -40,6 +40,7 @@
         background-color $color-darkcoral
         color $color-snow
         border-color $color-darkcoral
+        text-align center
 
         &:hover
             background-color #fff
