--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -4,7 +4,14 @@
     padding 14px 34px
     height 48px
     font-size 16px
-    outline 0
+    border 0
+
+.ui-textarea
+    background-color #f5f5f5
+    border-radius 3px
+    padding 14px 34px
+    height 84px
+    font-size 16px
     border 0
 
 .ui-form
@@ -44,3 +51,38 @@
         display flex
         align-items center
         justify-content center
+
+.ui-form-akcia
+    display flex
+    flex-direction column
+    padding 28px 50px 36px
+
+    input
+        margin 8px 0
+
+    textarea
+        margin 8px 0
+
+    label
+        font-family 'Rubik'
+        font-size 14px
+        color #f5f5f5
+        line-height 32px
+        padding 0 22px
+
+    p
+        font-family 'Rubik'
+        font-size 16px
+        color #fafafa
+        text-align center
+        line-height 20px
+        padding-top 28px
+
+    &__title
+        font-size 26px
+        line-height 32px
+        padding-bottom 20px
+        text-align center
+
+    &__line
+        padding 8px 0 16px
