--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -39,7 +39,6 @@
         width 100%
         max-height 425px
         overflow hidden
-        margin 15px 0
 
     &__flex
         display flex
@@ -59,8 +58,11 @@
             text-decoration underline
             cursor pointer
 
+        span
+            font-weight bold
+
     &__content
-        padding 0
+        padding 20px 0 0 0
 
     &__text-italic
         font-family 'PantonRI'
@@ -68,6 +70,7 @@
 
     &__text-big
         font-size 20px
+        line-height 26px
 
     &__textbold
         font-weight bold
