--- a/frontend/src/index.jade
+++ b/frontend/src/index.jade
@@ -43,7 +43,7 @@ block content
                             .ui-advantage__content
                                 .ui-advantage__text Компания «ОКИ-ДОКИ» работает на российском рынке систем офисных перегородок 13 лет! Начало нашей деятельности ...
                                 .ui-advantage__link
-                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/experience/")
                                         i +
                     .col.col--xl.col--no-gutters
                         .ui-advantage__item
@@ -55,7 +55,7 @@ block content
                             .ui-advantage__content
                                 .ui-advantage__text Проектирование, производство, установка перегородок различного назначения (офисных и сантехнических)...
                                 .ui-advantage__link
-                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/own-production/")
                                         i +
                     .col.col--xl.col--no-gutters
                         .ui-advantage__item
@@ -70,7 +70,7 @@ block content
                             .ui-advantage__content
                                 .ui-advantage__text Гарантийное обслуживание (бесплатное для заказчика) включает устранение скрытых дефектов и недостатков конструкции в течение указанного...
                                 .ui-advantage__link
-                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/warranty/")
                                         i +
                     .col.col--xl.col--no-gutters
                         .ui-advantage__item
@@ -83,7 +83,7 @@ block content
                             .ui-advantage__content
                                 .ui-advantage__text Компания «ОКИ-ДОКИ» предлагает широкий диапазон цен – для заказчика с любым бюджетом мы воссоздадим благоприятное рабочее пространство.
                                 .ui-advantage__link
-                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="#")
+                                    a.ui-circle-button.ui-circle-button--red.ui-circle-button--size-md(href="/advantages/price-quality/")
                                         i +                
         .ui-our-production
             .grid.grid--container
