--- a/frontend/src/_styles/modules/steps-vertical.styl
+++ b/frontend/src/_styles/modules/steps-vertical.styl
@@ -65,7 +65,7 @@
     line-height 51px
     padding 0 10px
     height 100%
-    margin-bottom 20px
+    margin 20px 0
 
     &__nobg
         background none
