* frontend: добавленые новые шрифты

--- a/frontend/src/_styles/modules/fonts.styl
+++ b/frontend/src/_styles/modules/fonts.styl
@@ -1,9 +1,20 @@
 @font-face
     font-family 'Panton'
+    src url('/fonts/panton/panton.woff2') format('woff2'),
+        url('/fonts/panton/panton.woff') format('woff')
+    font-weight normal
     font-style normal
-    src url('/fonts/panton/Panton.otf')
 
 @font-face
-    font-family 'PantonRI'
+    font-family 'Panton'
+    src url('/fonts/panton/panton-italic.woff2') format('woff2'),
+        url('/fonts/panton/panton-italic.woff') format('woff')
+    font-style italic
+    font-weight normal
+
+@font-face
+    font-family 'Panton'
+    src url('/fonts/panton/panton-bold.woff2') format('woff2'),
+        url('/fonts/panton/panton-bold.woff') format('woff')
     font-style normal
-    src url('/fonts/panton/PantonRegularItalic.otf')
+    font-weight bold
