--- a/frontend/src/_styles/modules/text-block.styl
+++ b/frontend/src/_styles/modules/text-block.styl
@@ -65,8 +65,9 @@
         padding 20px 0 0 0
 
     &__text-italic
-        font-family 'PantonRI'
+        font-family 'Panton'
         padding-bottom 20px
+        font-style italic
 
     &__text-big
         font-size 20px
