--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -768,7 +768,8 @@ init($breakpoints, $columns)
         padding-bottom 30px
 
     &__signing-up
-        font-family 'PantonRI'
+        font-family 'Panton'
+        font-style italic
         font-size 20px
         color #090909
         line-height 26px
