--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -40,7 +40,7 @@ body.ui-page
                         .ui-slogan  Производство и продажа#[br] офисных перегородок
                         .ui-address.ui-address__header
                             img(src="/images/location.png")
-                            Г. МОСКВА,#[br]  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
+                            | Г. МОСКВА,#[br]  СОКОЛЬНИЧЕСКИЙ ВАЛ, 1А
                         .ui-regim ПН-ЧТ 9:00 — 19:00#[br] ПТ 9:00 — 18:00
                     .col.col--xl-2.col--md-3.text--xl-center
                         .ui-phone 8 (495) 663 18 81
