--- a/frontend/src/advantages/own-production/index.jade
+++ b/frontend/src/advantages/own-production/index.jade
@@ -27,10 +27,10 @@ block content
                                         .ui-text-block__text-big  Работая более десятка лет на рынке систем офисных перегородок, мы понимаем важность и сложность выбора заказчиком хорошего поставщика этой продукции.
                                         p
                                             span #[br]Производство перегородок представляет собой сложнейший технологический процесс, 
-                                            требующий наличия качественных комплектующих, профессиональных навыков рабочего персонала и современного, качественного оборудования: различных станков и специализированного ручного инструмента, действенного контроля качества – все то, что как раз имеет наша компания.
+                                            | требующий наличия качественных комплектующих, профессиональных навыков рабочего персонала и современного, качественного оборудования: различных станков и специализированного ручного инструмента, действенного контроля качества – все то, что как раз имеет наша компания.
                                         p #[br]Достигнув превосходных результатов,
                                             span мы все равно постоянно усовершенствуем наше производство, оперативно реагируя на изменения на рынке, появление новинок и выдвигаемых клиентами требований.
-                                            #[br]#[br]Проектирование и изготовление, а также монтаж перегородок из материалов высочайшего качества по индивидуальному заказу клиента (даже нестандартному) мы осуществляем в максимально сжатые сроки.
+                                            | #[br]#[br]Проектирование и изготовление, а также монтаж перегородок из материалов высочайшего качества по индивидуальному заказу клиента (даже нестандартному) мы осуществляем в максимально сжатые сроки.
                 .col.col--xl-4
                     .grid
                         .row
