--- a/frontend/src/advantages/warranty/index.jade
+++ b/frontend/src/advantages/warranty/index.jade
@@ -24,13 +24,12 @@ block content
                             .col.col--xl-6
                                 .ui-text-block
                                     .ui-text-block__text 
-                                        p
-                                            Неизменный контроль качества услуг, использование комплектующих и материалов проверенных временем ведущих и известных производителей, высокий профессионализм команды и современное оборудование позволяет нам гарантировать длительный срок службы нашей продукции, а именно гарантия составляет 3 года.
+                                        p Неизменный контроль качества услуг, использование комплектующих и материалов проверенных временем ведущих и известных производителей, высокий профессионализм команды и современное оборудование позволяет нам гарантировать длительный срок службы нашей продукции, а именно гарантия составляет 3 года.
                                             span #[br]#[br]Кстати, в течение указанного срока перегородки можно демонтировать и монтировать на новом месте без потери их как, эксплуатационных качеств, так и внешнего вида
                                             |#{' '}(при условии соблюдений правил проведения данных работ).
                                             span #[br]#[br]Гарантийное обслуживание (бесплатное для заказчика) включает устранение скрытых дефектов и недостатков конструкции в течение указанного срока гарантии – 3 года.
-                                            #[br]#[br]Заказчикам не рекомендуется самостоятельно заменять комплектующие, изменять конструкцию, а также нарушать условия эксплуатации, поскольку этом случае возможен отказ в гарантийном обслуживании. 
-                                            #[br]#[br]Также повреждения и порча конструкций вследствие внешнего воздействия на нее не является правом на гарантийное обслуживание.
+                                            | #[br]#[br]Заказчикам не рекомендуется самостоятельно заменять комплектующие, изменять конструкцию, а также нарушать условия эксплуатации, поскольку этом случае возможен отказ в гарантийном обслуживании. 
+                                            | #[br]#[br]Также повреждения и порча конструкций вследствие внешнего воздействия на нее не является правом на гарантийное обслуживание.
                                             
                 .col.col--xl-4
                     .grid
