--- a/frontend/src/faq/index.jade
+++ b/frontend/src/faq/index.jade
@@ -31,9 +31,9 @@ block content
                                         | Чем отличаются мобильные перегородки от стационарных? Какие перегородки дешевле?
                                     .ui-showfaq 
                                         a Мобильные перегородки
-                                        &nbsp изготавливаются в соответствии с указанными размерами на заводе и уже в готовом виде их привозят на заказ. Остается только их установить в соответствии с дизайн - проектом. 
+                                        | &nbsp изготавливаются в соответствии с указанными размерами на заводе и уже в готовом виде их привозят на заказ. Остается только их установить в соответствии с дизайн - проектом. 
                                         a &nbsp Стационарные перегородки
-                                        &nbsp только комплектуются на складе, монтаж при этом более сложный и трудоемкий.  Однозначного ответа на вопрос: «Что дешевле?»- нет. Цена зависит от многих факторов. Необходимо сделать расчет.
+                                        | &nbsp только комплектуются на складе, монтаж при этом более сложный и трудоемкий.  Однозначного ответа на вопрос: «Что дешевле?»- нет. Цена зависит от многих факторов. Необходимо сделать расчет.
                                 li 
                                     a.js-faq-item
                                         span + 
