--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -46,6 +46,20 @@
             background-color #fff
             color $color-darkcoral
 
+    &--grey
+        background #f9f9f9
+        color $color-dark
+        box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
+        text-transform uppercase
+        font-weight bold
+        border-top 4px solid transparent
+        padding 18px
+
+        &:hover
+        &^[1]--active
+            color $color-dark
+            border-top 4px solid $color-darkcoral
+
     &--black
         background-color $color-smokyblack
         color $color-snow
