--- a/frontend/src/_styles/modules/form.styl
+++ b/frontend/src/_styles/modules/form.styl
@@ -16,7 +16,7 @@
 
 .ui-form
     background $color-dark
-    box-shadow 0px 3px 21px 0px rgba(0, 0, 0, 0.1)
+    box-shadow 0px 3px 5px 0px rgba(0, 0, 0, 0.1)
     font-family 'Rubik'
     color #fff
 
@@ -86,3 +86,31 @@
 
     &__line
         padding 8px 0 16px
+
+.ui-form-request
+    display flex
+    padding 30px 20px 34px 24px
+
+    &__title
+        font-family 'Rubik'
+        font-size 26px
+        color #ffffff
+        line-height 32px
+        padding-bottom 27px
+
+    &__description
+        font-family 'Rubik'
+        font-size 16px
+        color #fafafa
+        line-height 20px
+
+    &__content
+        padding 0 15px
+
+    input
+        margin-bottom 16px
+        width 100%
+
+    textarea
+        min-height 112px
+        width 100%
