--- a/frontend/src/_layouts/base.jade
+++ b/frontend/src/_layouts/base.jade
@@ -67,7 +67,7 @@ body.ui-page
                       .ui-menu__item
                           a.ui-menu__link(href="/faq/") Вопрос-ответ
                       .ui-menu__item
-                          a.ui-menu__link(href="") Контакты
+                          a.ui-menu__link(href="/contact/") Контакты
                     .col.col--xl-2.js-show-callback
                         a.ui-button.ui-button--size-lg.ui-button--default.ui-button--callback Перезвоните мне
                     
