--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -821,3 +821,73 @@ init($breakpoints, $columns)
 
 .ui-advantages
     padding-bottom 50px
+
+.ui-contact
+    padding-bottom 50px
+
+    &__item
+        display flex
+        align-items center
+        padding-bottom 16px
+
+    &__icon
+        width 68px
+        height 68px
+        border 3px solid $color-darkcoral
+        border-radius 50%
+        display flex
+        align-items center
+        justify-content center
+
+        svg
+            color $color-darkcoral
+            fill $color-darkcoral
+
+    &__text
+        font-family 'Panton'
+        font-size 16px
+        color #090909
+        line-height 20px
+        font-weight bold
+        padding-left 30px
+
+    &__nav
+        padding-bottom 33px
+
+    &__map
+        position relative
+
+    &__title
+        font-family 'Panton'
+        font-size 20px
+        color #090909
+        line-height 26px
+        font-weight bold
+
+        p
+            font-size 16px
+            color #090909
+            line-height 20px
+            font-weight normal
+
+    &__phone
+        font-family 'Panton'
+        font-size 30px
+        color #090909
+        line-height 20px
+
+    &__form
+        display flex
+        justify-content center
+        padding-top 54px
+
+.ui-marker
+    display flex
+
+    &__title
+        background #171717
+        color #fff
+        padding 7px
+        border-radius 2px
+        height 30px
+        margin 2px -10px
