--- a/frontend/src/_styles/main.styl
+++ b/frontend/src/_styles/main.styl
@@ -19,6 +19,7 @@
 @import 'modules/configurations-cart';
 @import 'modules/gallery-cart';
 @import 'modules/projects-cart';
+@import 'modules/press-cart';
 @import 'modules/text-block';
 @import 'modules/certificates-cart';
 
