--- a/frontend/src/_styles/modules/button.styl
+++ b/frontend/src/_styles/modules/button.styl
@@ -167,6 +167,13 @@
             right 15px
             font-size 26px
 
+    &--size-xs
+      i
+          line-height 18px
+          bottom 12px
+          right 12px
+          font-size 24px
+
 .ui-quarter-button
     font-family 'Fira Sans'
     height 100%
